[package]
name = "basic"
version = "0.1.0"
edition = "2021"
authors = ["i3oc9i <ivano.coltellacci@gmail.com>"]

[dependencies]


[[example]]
name = "01"
path = "01/main.rs"

[[example]]
name = "02"
path = "02/main.rs"

[[example]]
name = "03"
path = "03/main.rs"

[[example]]
name = "04"
path = "04/main.rs"


